--- a/paper/sections/ai_acknowledgment.tex
+++ b/paper/sections/ai_acknowledgment.tex
@@ -1,12 +1,16 @@
-\section*{Acknowledgments}
+\section*{AI Acknowledgment}
 
-The authors acknowledge the use of AI-assisted tools in the development of this paper. Specifically, large language models were utilized to assist in the organization, refinement, and formalization of ideas. The AI system contributed by:
+This work began as an exploration of how Hawking radiation within a black hole might influence its internal structure. The process of formalizing these ideas and predicting their implications was significantly aided by AI-assisted tools. While the underlying questions originate from human intuition and inquiry, AI contributed to refining, organizing, and extending the theoretical framework.
+
+Specifically, the AI system assisted in:
 \begin{itemize}
-    \item Structuring and outlining theoretical concepts in a clear and systematic manner.
-    \item Assisting with LaTeX document generation and formatting.
-    \item Suggesting relevant academic references based on the discussed topics.
-    \item Refining mathematical expressions and ensuring logical consistency.
-    \item Providing insight into potential areas for further exploration and research.
+    \item Structuring and systematically developing theoretical concepts.
+    \item Assisting with LaTeX document preparation and mathematical formalization.
+    \item Suggesting refinements to definitions, notation, and consistency in presentation.
+    \item Identifying potential gaps and logical dependencies within the proposed framework.
+    \item Proposing lines of inquiry and highlighting where additional theoretical justification is required.
 \end{itemize}
 
-All intellectual contributions, critical reasoning, and final theoretical formulations were the result of human authorship. The AI served as an assistant in enhancing clarity, organization, and technical presentation. The responsibility for the correctness, validity, and originality of the work lies solely with the authors.
+This paper does not claim to present a definitive theory but rather an exploration of an interesting question. The AI-assisted process led to a framework that extends beyond the author's ability to fully evaluate, making it an exercise in speculative theorization rather than confirmed physics. The hope is that this formalization may inspire further rigorous investigation by those with deeper expertise in quantum gravity and black hole physics.
+
+All intellectual contributions, critical reasoning, and final theoretical judgments remain the responsibility of the human author. The AI served as a tool to enhance clarity, organization, and technical formulation, but the responsibility for correctness, validity, and originality of the work lies solely with the author.
