--- a/paper/sections/conclusions_future_work.tex
+++ b/paper/sections/conclusions_future_work.tex
@@ -1,48 +1,48 @@
 \section{Conclusions and Future Work}
 \label{sec:conclusions}
 
-The conventional view of black holes, based on general relativity, predicts the formation of singularities—regions where curvature and energy density diverge to infinity. However, the incorporation of quantum effects suggests that this picture may be incomplete. In this work, we have proposed an alternative framework in which black hole interiors evolve toward a self-regulating equilibrium state, preventing singularity formation.
+The conventional view of black holes, based on general relativity, predicts the formation of singularities—regions where curvature and energy density diverge to infinity. However, the incorporation of quantum effects suggests that this picture may be incomplete. In this work, we have proposed a speculative framework in which black hole interiors evolve toward a self-regulating equilibrium state, preventing singularity formation. While this model presents an intriguing alternative to classical collapse, it remains heuristic and requires further theoretical justification.
 
 \subsection{Summary of Key Findings}
 The core hypothesis of this model is that black holes do not undergo unrestricted collapse but instead develop an equilibrium structure due to a balance between:
 \begin{enumerate}
-    \item \textbf{Curvature-Dependent Local Radiation:} Hawking-like radiation is generated throughout the interior, with an emission rate increasing as a function of local spacetime curvature.
+    \item \textbf{Curvature-Dependent Local Radiation:} Hawking-like radiation is assumed to be generated throughout the interior, with an emission rate increasing as a function of local spacetime curvature.
     \item \textbf{Equilibrium Condition:} The outward energy flux from radiation counteracts the inward flux from gravitational collapse, leading to a stable core.
     \item \textbf{Finite Curvature Core:} Instead of a singularity, the interior settles into a regulated region of constant curvature, possibly near the Planck scale.
 \end{enumerate}
 
-This framework suggests that black hole interiors are structured regions with dynamic properties, rather than singular endpoints of collapse. The resulting self-regulated core prevents divergence of curvature while remaining compatible with semiclassical Hawking radiation near the event horizon.
+While this framework suggests that black hole interiors could have structured, dynamic properties, its assumptions remain speculative, and key derivations from fundamental physics are still lacking. A rigorous justification of the proposed balance mechanism, along with an explicit derivation of the local Hawking-like radiation term from quantum field theory in curved spacetime, is necessary for the model to be considered viable.
 
 \subsection{Implications for Black Hole Physics}
-If the proposed equilibrium model is correct, several important consequences follow:
+If this heuristic framework captures essential aspects of black hole interiors, it suggests several important consequences:
 \begin{itemize}
-    \item \textbf{No Singularity Formation:} The classical singularity is replaced by a structured core with finite curvature.
-    \item \textbf{Modified Black Hole Evolution:} As black holes radiate, their internal structure evolves dynamically rather than simply collapsing.
-    \item \textbf{Possible Information Retention:} If the core stabilizes, it may provide a mechanism for preserving or eventually releasing information.
-    \item \textbf{Remnant Formation:} A Planck-scale remnant may persist after evaporation, offering an alternative to complete black hole disappearance.
+    \item \textbf{No Singularity Formation:} The classical singularity could be replaced by a structured core with finite curvature, assuming the equilibrium conditions hold.
+    \item \textbf{Modified Black Hole Evolution:} As black holes radiate, their internal structure may evolve dynamically rather than undergoing unrestricted collapse.
+    \item \textbf{Possible Information Retention:} If the core stabilizes, it could provide a mechanism for preserving or eventually releasing information, though a rigorous treatment is required.
+    \item \textbf{Remnant Formation:} If this framework holds, a Planck-scale remnant could persist after evaporation, though further analysis is required to assess whether this outcome is physically viable.
 \end{itemize}
 
-These implications suggest that black holes may serve as windows into quantum gravitational effects, offering insights into the fundamental nature of spacetime.
+It is important to recognize that these implications depend on the assumption that local curvature-dependent radiation plays a significant role inside black holes. At present, there is no derivation from first principles that confirms this effect.
 
 \subsection{Directions for Future Research}
-While the proposed model offers a novel approach to black hole interiors, several open problems remain. Addressing these will require both theoretical developments and numerical simulations:
+While the proposed model offers an interesting conceptual framework, several open problems remain. Addressing these will require both theoretical developments and numerical simulations:
 
 \begin{enumerate}
     \item \textbf{First-Principles Derivation of Radiation Emission:} The function \( f(\mathcal{R}) \), which governs radiation as a function of curvature, needs to be rigorously derived from quantum field theory in curved spacetime or an appropriate quantum gravity framework.
     
-    \item \textbf{Stability Analysis and Numerical Simulations:} Linear and nonlinear stability of the core must be tested through numerical simulations of Einstein’s equations coupled with radiation backreaction.
+    \item \textbf{Stability Analysis and Numerical Simulations:} The stability of the equilibrium core must be tested through numerical simulations of Einstein’s equations coupled with radiation backreaction. Both linear and nonlinear perturbations should be analyzed to determine whether the core remains dynamically stable.
+
+    \item \textbf{Modified Einstein Equations:} The effective energy-momentum tensor for the core must be identified to correctly model quantum effects on classical spacetime dynamics. Backreaction of local radiation on the metric must also be incorporated.
     
-    \item \textbf{Modified Einstein Equations:} The effective energy-momentum tensor for the core must be identified to correctly model quantum effects on classical spacetime dynamics.
+    \item \textbf{Observational Signatures:} Any potential observational effects—such as deviations from classical black hole predictions or gravitational wave echoes—must be identified and assessed for detectability. However, given the speculative nature of this framework, any observational predictions remain purely hypothetical at this stage.
     
-    \item \textbf{Observational Signatures:} Potential observational tests—such as gravitational wave echoes or deviations from classical black hole predictions—should be investigated to determine if this model produces detectable consequences.
+    \item \textbf{Late-Stage Evolution and Final State:} The end state of black hole evaporation remains uncertain. A detailed study is required to determine whether the core dissipates entirely or persists as a remnant. The interaction between the local radiation effects and conventional Hawking radiation at the event horizon must also be analyzed.
     
-    \item \textbf{Late-Stage Evolution and Final State:} The end state of black hole evaporation remains uncertain. Does the core dissipate entirely, or does it persist as a remnant?
-    
-    \item \textbf{Implications for the Information Paradox:} If information is retained in the core, how is it released over time? Could this model provide a resolution to the information paradox?
+    \item \textbf{Implications for the Information Paradox:} If information is retained in the core, how is it released over time? Could this model provide a pathway to resolving the information paradox, or does it introduce new challenges?
 \end{enumerate}
 
 \subsection{Final Remarks}
-The self-regulating core hypothesis presents a compelling alternative to classical singularity formation, suggesting that black holes possess rich internal structures that evolve dynamically. This model bridges classical relativity and quantum mechanics, providing a framework that could guide future research in quantum gravity, black hole thermodynamics, and high-energy astrophysics.
+The self-regulating core hypothesis presents a speculative alternative to classical singularity formation, serving as an exploratory framework for further discussion and refinement. This model bridges classical relativity and quantum mechanics, providing a conceptual approach that could guide future research in quantum gravity, black hole thermodynamics, and high-energy astrophysics. However, it remains an incomplete theory, requiring further theoretical and computational development before any definitive conclusions can be drawn.
 
-A complete resolution of these questions requires advances in both theoretical physics and computational modeling. By further developing the mathematical framework and exploring potential observational consequences, we may gain deeper insight into the fundamental nature of spacetime and the quantum structure of black holes.
+A complete resolution of these questions requires advances in both theoretical physics and numerical modeling. By further developing the mathematical framework, incorporating quantum gravitational effects, and exploring potential observational consequences, we may gain deeper insight into the fundamental nature of spacetime and the quantum structure of black holes.
 
